[package]
name = "Qpipe"
version = "0.1.0"
edition = "2021"

[dependencies]
surf = "2.3.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.209", features = ["derive"] }
clap = { version = "4.5.16", features = ["derive"] }
serde_yaml = "0.8.23"
schemars = "0.8.11"
serde_json = "1.0.127"
log = "0.4.22"
futures = "0.3.30"
tiny_http = "0.12.0"
cron = "0.12.1"
chrono = "0.4.23"
chrono-tz = "0.9.0"
rand = "0.8.5"
env_logger = "0.11.5"